Bug fix and aws s3,ses package implemented and all model implemented

--- a/prod.env
+++ b/prod.env
@@ -1,8 +1,9 @@
 # API ENV
-PORT=3002
+## PORT
+PORT=3000
 
 DB=postgres
-DB_NAME=forgolang_test
+DB_NAME=forgolang
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=forgolang
@@ -18,4 +19,3 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASS=
 REDIS_DB=
-
