--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,5 @@
 # API ENV
+HOST=127.0.0.1
 PORT=3001
 
 DB=postgres
@@ -14,7 +15,7 @@ RABBITMQ_PORT=5672
 RABBITMQ_USER=local
 RABBITMQ_PASS=local
 
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
 REDIS_PASS=
-REDIS_DB=
+REDIS_DB=0
