--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: bionic
+dist: xenial
 language: go
 
 go:
@@ -11,9 +11,12 @@ git:
   depth: 1
 
 addons:
+  postgresql: "11"
   apt:
     packages:
       - rabbitmq-server
+      - postgresql-11
+      - postgresql-client-11
 
 services:
   - rabbitmq
@@ -21,13 +24,6 @@ services:
   - elasticsearch
 
 before_install:
-  - sudo service postgresql stop
-  - sudo apt install -yq --no-install-suggests --no-install-recommends postgresql-11 postgresql-client-11
-  - sed -e 's/^port.*/port = 5432/' /etc/postgresql/11/main/postgresql.conf > postgresql.conf
-  - sudo chown postgres postgresql.conf
-  - sudo mv postgresql.conf /etc/postgresql/11/main
-  - sudo cp /etc/postgresql/11/main/pg_hba.conf
-  - sudo service postgresql restart 11
   - sudo rabbitmqctl add_user local local
   - sudo rabbitmqctl set_user_tags local administrator
   - sudo rabbitmqctl set_permissions -p / local ".*" ".*" ".*"
@@ -38,7 +34,6 @@ notifications:
   email: false
 
 before_script:
-  - export PATH="/usr/lib/postgresql/11/bin:$PATH"
   - psql -U postgres -c "create user forgolang login password '123456';"
   - psql -U postgres -c "create database forgolang_test owner forgolang;"
   - sleep 10
