--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
     docker:
       - image: circleci/golang:1.11
           environment:
-            GO111MODULE: "on"
-
+            GO111MODULE: on
       - image: postgres:11.5-alpine
           environment:
             POSTGRES_USER: forgolang
