--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,12 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.11
-          environment:
-            GO111MODULE: on
+        environment:
+          GO111MODULE: "on"
       - image: postgres:11.5-alpine
-          environment:
-            POSTGRES_USER: forgolang
-            POSTGRES_DB: forgolang_test
+        environment:
+          POSTGRES_USER: forgolang
+          POSTGRES_DB: forgolang_test
       - image: rabbitmq:3.5.4
       - image: circleci/redis:alpine
       - image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
